<resources>
    <string name="app_name">Kinopoisk Lite (Very)</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="login_hint">Логин</string>
    <string name="pass_hint">Пароль</string>
    <string name="surname_hint">Фамилия</string>
    <string name="name_hint">Имя</string>
    <string name="patron_hint">Отчество</string>
    <string name="birth_hint">Дата рождения</string>
    <string name="role_hint">Роль</string>
    <string name="auth_button">Войти</string>
    <string name="reg_ref">Регистрация</string>
    <string name="tickets_ref">Сеансы</string>
    <string name="movies_ref">Фильмы</string>
    <string name="reserved_ref">Мои билеты</string>
    <string name="cabinet_ref">Личный кабинет</string>
    <string-array name="roles">
        <item>Посетитель</item>
        <item>Сотрудник кинотеатра</item>
        <item>Администратор</item>
    </string-array>
    <string name="trailer_hint">Трейлер</string>
    <string-array name="ratings">
        <item>0+</item>
        <item>6+</item>
        <item>12+</item>
        <item>18+</item>
    </string-array>
    <string name="change_pass">Сменить пароль</string>
    <string name="movie_view">Фильм</string>
    <string name="hall_view">Зал</string>
    <string name="date_view">Дата</string>
    <string name="time_view">Время</string>
    <string name="cost_view">Цена</string>
    <string name="count_view">Количество</string>
    <string name="title_text">Название</string>
    <string name="duration_text">Длительность (мин)</string>
    <string name="rating_text">Возр. рейтинг</string>
    <string name="release_year_text">Год выхода</string>
    <string name="more_about">Подробнее...</string>
    <string name="description_text">Описание</string>
    <string name="reserve_button">Забронировать</string>
    <string name="unreserve_button">Разбронировать</string>
    <string name="search_button">Найти</string>
    <string name="present_box">Только в наличии</string>
    <string name="add_element">Добавить</string>
    <string-array name="operators">
        <item>=</item>
        <item>&lt;</item>
        <item>&gt;</item>
        <item>&lt;=</item>
        <item>&gt;=</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>